<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_email_black"
            android:title="@string/drawer_invites" />
        <item
            android:id="@+id/nav_prizes"
            android:icon="@drawable/ic_trophy"
            android:title="@string/drawer_prizes" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/ic_ranking"
            android:title="@string/drawer_rankings" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_schedule_black"
            android:title="@string/drawer_history" />
        <item
            android:id="@+id/request_coins"
            android:icon="@drawable/ic_coin"
            android:title="@string/drawer_request_coins" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/drawer_settings" />

    </group>

</menu>
