<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StartBetActivity"
    tools:showIn="@layout/activity_start_bet">

    <TextView
        android:id="@+id/match_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/black_grey"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/logos_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/match_time"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/left_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/home_logo"
                android:layout_width="40dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="x"
            android:textColor="@color/grey_2"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/right_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/away_logo"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logos_container"
        android:layout_marginTop="10dp"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/match_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/choose_result" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_team_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:gravity="center"
                android:maxLength="12"
                android:padding="10dp"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:gravity="center"
                android:maxLength="12"
                android:padding="10dp"
                android:text="Empate"
                android:textColor="@drawable/rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio_team_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:gravity="center"
                android:maxLength="12"
                android:padding="10dp"
                android:textColor="@drawable/rbtn_textcolor_selector" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/bet_value" />

        <LinearLayout
            android:id="@+id/bet_amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8" />

            <EditText
                android:id="@+id/bet_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@drawable/edit_text_borders"
                android:inputType="number"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/bet_with" />

        <LinearLayout
            android:id="@+id/friend_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="start">

                <ImageView
                    android:id="@+id/friend_photo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/friend_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/friend_win_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/make_bet_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_radius_green"
        android:textColor="@color/white"
        android:text="@string/make_bet"/>

</RelativeLayout>